--- a/curriculo.html
+++ b/curriculo.html
@@ -23,10 +23,10 @@
             <div class="container-redes-sociais">
                 <h2>Projetos</h2>
                 <ul class="apresentacao__conteudo__texto">
-                    <!-- <li>2024-2025 Criação sites web com HTML, CSS e JavaScript</li> -->
+<!--                <li>2024-2025 Criação sites web com HTML, CSS e JavaScript</li>
                     <li>Projeto tal... <a href="">Clique aqui</a> </li>
                     <li>Projeto tal... <a href="">Clique aqui</a> </li>
-                    <li>Projeto tal... <a href="">Clique aqui</a> </li>
+                    <li>Projeto tal... <a href="">Clique aqui</a> </li> -->
                 </ul>
             <h2>Certificados</h2>
                 <ul class="apresentacao__conteudo__texto">
