--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <img src="./imagem/eu222.jpg" alt="Homem branco, cabelo preto e curto, barba por fazer, camisa cinza, com ocúlos de grau, sorrindo para a câmera." class="responsive-img" loading="lazy">
     </main>
     <footer>
-        <p class="text-footer">Desenvolvido por Rodrigo Morello Junior</p>
+        <p class="text-footer"> © 2025 Rodrigo Morello Junior</p>
     </footer>
 </body>
 </html>
