--- a/curriculo.html
+++ b/curriculo.html
@@ -19,27 +19,26 @@
     <main class="conteudo-principal">
         <section class="container-conteudo">
             <h1 class="titulo">Currículo</h1>
-            <p class="conteudo__texto">Atualmente, estudo desenvolvimento de software com foco em back-end no programa Oracle Next, especializando-me em Java. Tenho experiência prática em desenvolvimento web, utilizando JavaScript, HTML5 e CSS para criar interfaces modernas e responsivas.</p>
+            <p class="conteudo__texto">Tenho experiência em desenvolvimento front-end com HTML, CSS e JavaScript, criando soluções voltadas para a experiência do usuário.<br><br> Atualmente, estou estudando Flutter e iniciando minha jornada com TypeScript, focando em evoluir como desenvolvedor Fullstack.</p>
             <div class="container-redes-sociais">
                 <h2>Projetos</h2>
                 <ul class="apresentacao__conteudo__texto">
-<!--                <li>2024-2025 Criação sites web com HTML, CSS e JavaScript</li>
-                    <li>Projeto tal... <a href="">Clique aqui</a> </li>
-                    <li>Projeto tal... <a href="">Clique aqui</a> </li>
-                    <li>Projeto tal... <a href="">Clique aqui</a> </li> -->
+                    <li>Projeto: <a href="https://github.com/Seremendy/Jogo-do-numero-secreto">Jogo do número secreto</a></li>
+                    <li>Projeto: <a href="https://github.com/Seremendy/Sorteador">Sorteador de nomes</a> </li>
+                    <li>Projeto: <a href=""></a></li>
                 </ul>
-            <h2>Certificados</h2>
-                <ul class="apresentacao__conteudo__texto">
-                    <li>Git e GitHub - Alura Cursos <a href="https://cursos.alura.com.br/certificate/rodrigomorello6/git-github-compartilhando-colaborando-projetos">Certificado</a> </li>
-                    <li>Lógica de programação - Alura Cursos <a href="https://cursos.alura.com.br/certificate/rodrigomorello6/logica-programacao-mergulhe-programacao-javascript">Certificado</a></li>
-                    <li>HTML e CSS - Alura Cursos <a href="https://cursos.alura.com.br/certificate/rodrigomorello6/html-css-classes-posicionamento-flexbox">Certificado</a></li>
-                </ul>
+            <h2>Conhecimentos</h2>
+            <div class="imagens-Conhecimento">
+                    <img src="/ONE-Alura/portifolioFrontEnd/imagem/html-5.png" width="50px" height="50px">
+                    <img src="/ONE-Alura/portifolioFrontEnd/imagem/css-3.png" width="50px" height="50px">
+                    <img src="/ONE-Alura/portifolioFrontEnd/imagem/icons8-javascript-48.png" width="50px" height="50px">
+                </div>
             </div>
         </section>
         <img src="./imagem/eu222.jpg" alt="Homem branco, cabelo preto e curto, barba por fazer, camisa cinza, com ocúlos de grau, sorrindo para a câmera." class="responsive-img" loading="lazy">
     </main>
     <footer>
-        <p class="text-footer">Desenvolvido por Rodrigo Morello Junior</p>
+        <p class="text-footer"> © 2025 Rodrigo Morello Junior</p>
     </footer>
 </body>
 </html>
