--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <main class="conteudo-principal">
         <section class="container-conteudo">
-            <h1 class="titulo"><span class="btn-color-texto">Eleve seu negócio digital a outro nível</span> <strong class="btn-color-especial">um Front-end de qualidade!</strong></h1>
-            <p class="conteudo__texto">Olá! Rodrigo Morello Junior, desenvolvedor Front-end com especialidade em JavaScript, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <h1 class="titulo"><span class="btn-color-texto">Construindo hoje a base do seu próximo</span> <strong class="btn-color-especial">projeto de sucesso!</strong></h1>
+            <p class="conteudo__texto">Olá! Sou Rodrigo Morello Junior, desenvolvedor front-end com foco em JavaScript, HTML e CSS. Atualmente, estou expandindo meus conhecimentos com Flutter e TypeScript, rumo ao full stack. <br><br>Gosto de transformar ideias em soluções reais e funcionais, ajudando negócios e criativos a colocarem projetos no ar com qualidade. <br>Vamos tirar sua ideia do papel?</p>
             <div class="container-redes-sociais">
                 <h2>Acesse minhas redes:</h2>
                 <a href="https://www.linkedin.com/in/rodrigo-morello-dev/" class="btn-botoes"><img src="./imagem/Logo linkedin.svg" alt="logo do linkedin">LinkedIn</a>
@@ -29,7 +29,7 @@
         <img src="./imagem/eu222.jpg" alt="Homem branco, cabelo preto e curto, barba por fazer, camisa cinza, com ocúlos de grau, sorrindo para a câmera." class="responsive-img" loading="lazy">
     </main>
     <footer>
-        <p class="text-footer">Desenvolvido por Rodrigo Morello Junior</p>
+        <p class="text-footer"> © 2025 Rodrigo Morello Junior</p>
     </footer>
 </body>
 </html>
