--- a/curriculo.html
+++ b/curriculo.html
@@ -29,9 +29,9 @@
                 </ul>
             <h2>Conhecimentos</h2>
             <div class="imagens-Conhecimento">
-                    <img src="/ONE-Alura/portifolioFrontEnd/imagem/html-5.png" width="50px" height="50px">
-                    <img src="/ONE-Alura/portifolioFrontEnd/imagem/css-3.png" width="50px" height="50px">
-                    <img src="/ONE-Alura/portifolioFrontEnd/imagem/icons8-javascript-48.png" width="50px" height="50px">
+                    <img src="imagem/html-5.png" width="50px" height="50px">
+                    <img src="imagem/css-3.png" width="50px" height="50px">
+                    <img src="imagem/icons8-javascript-48.png" width="50px" height="50px">
                 </div>
             </div>
         </section>
